# colony_sim_v2

./: Cargo.toml  README.md
src/: main.rs
src/components/: camera.rs
src/components/chunk/: blocks.rs
src/components/grid/: fractional.rs  mod.rs  offset.rs
src/plugins/: camera.rs  chunks.rs  grid.rs  mod.rs  render.rs  simulation.rs  testing.rs
src/resources/: mod.rs  render.rs
src/resources/chunks/: blocks.rs  chunk_pos.rs  mod.rs
src/resources/chunks/layer_chunk/: mod.rs  rle_layer.rs
src/resources/chunks/layer_chunk/chunk_data/: chunk_cell_pos.rs  mod.rs
src/resources/chunks/layers_data/: block.rs  mod.rs
src/resources/chunks/layers_data/block/: material_resource.rs  mod.rs
src/resources/render/: mod.rs  render_bit_map.rs
src/resources/simulation/: manager.rs  mod.rs  system.rs
src/resources/simulation/step/: mod.rs
src/systems/: camera.rs  mod.rs
src/systems/chunk/: render.rs
src/systems/grid/: mod.rs
src/systems/render/: block_instancing.rs  lights.rs  mod.rs
src/utils/: debug.rs  math.rs  memory_size.rs  mod.rs  performance.rs  rw_lock.rs
src/utils/multithread/: mod.rs  mutex.rs  rw_lock.rs
