[package]
name = "colony_sim_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
dashmap = "6.1.0"
lru = "0.14.0"
once_cell = "1.21.3"
rand = "0.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"
	


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
